v0.3.0/_sources/projections/cyl/cyl_universal_transverse_mercator.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/cyl/cyl_universal_transverse_mercator.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_cyl_cyl_universal_transverse_mercator.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_cyl_cyl_universal_transverse_mercator.py:


Universal Transverse Mercator
=============================

A particular subset of the transverse Mercator is the Universal Transverse Mercator
(UTM) which was adopted by the US Army for large-scale military maps. Here, the globe
is divided into 60 zones between 84°S and 84°N, most of which are 6 wide. Each of these
UTM zones have their unique central meridian. Furthermore, each zone is divided into
latitude bands but these are not needed to specify the projection for most cases.

In order to minimize the distortion in any given zone, a scale factor of 0.9996 has
been factored into the formulae. This makes the UTM projection a secant projection and
not a tangent projection like the transverse Mercator above. The scale only varies by
1 part in 1,000 from true scale at equator. The ellipsoidal projection expressions are
accurate for map areas that extend less than 10 away from the central meridian.

**u**\ *zone/scale* or **U**\ *zone/width*

the projection is set with **u** or **U**. *zone* sets the zone for the figure, and
the figure size is set wtih *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 22-35



.. image:: /projections/cyl/images/sphx_glr_cyl_universal_transverse_mercator_001.png
    :alt: cyl universal transverse mercator
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # UTM Zone is set to 52R
    fig.coast(
        region=[127.5, 128.5, 26, 27],
        projection="U52R/12c",
        land="lightgreen",
        water="lightblue",
        shorelines="thinnest",
        frame="afg",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.344 seconds)


.. _sphx_glr_download_projections_cyl_cyl_universal_transverse_mercator.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: cyl_universal_transverse_mercator.py <cyl_universal_transverse_mercator.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: cyl_universal_transverse_mercator.ipynb <cyl_universal_transverse_mercator.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
